fix overlapping and make health icon smaller in TC

--- a/src/app/styl/views/torrent_collection.styl
+++ b/src/app/styl/views/torrent_collection.styl
@@ -215,13 +215,13 @@
                         color: $TextError
                         font-style normal
                         font-size .9em
-                        left calc(100% - 35px)
+                        left calc(100% - 55px)
                         top -15px
 
                     .health-icon
                         position relative
-                        top -13px
-                        left calc(100% - 60px)
+                        top -15px
+                        left calc(100% - 75px)
                         font-size: 14px
                         color: #737577
                         cursor: pointer
@@ -236,7 +236,7 @@
 
 
                 li.result-item a
-                    width calc(100% - 50px)
+                    width calc(100% - 90px)
 
         .collection-actions
             display none
